* New improved Random/Sobol sampler adaptive code
* LXS parser now supports halttime and haltspp film halt conditions
* LXS parser now supports volumes
* Shadow catcher is now easier to use with multiple light sources of any type

''Beta1 released''

* Added the support for tiled denoising to save a huge amount of ram
* Added the support for new visual map cache for infinitelight, constantinfinite and sky2 light sources
* Added the support for new Disney BRDF material from Siggraph 2012 paper
* Upgraded Intel Oidn to v0.9.0
* Metal material uses a more accurate Albedo value (for Intel OIDN)
* Added "rounding" texture
* Added "modulo" texture
* Improved tiling feature of OIDN imagepipeline plugin
* Fix a bug in ToProperties code of "blender blend" texture when "halo" progression type was used

''Beta2 released''

* Added the support for periodic PhotonGI caustic cache update (aka SPPM without radius reduction)
* PathTracer class now support eye and light path tracing. LIGHTCPU now uses PathTracer class too.
* Added Hybrid Back/Forward path tracing support
* Added the support for glossy caustics rendering to Hybrid Back/Forward

### Fixed Bugs

* Fixed rendering resume feature

''Alpha0 released''

* Fixed a problem with infinite lights and BiDir or PhotonGI
* Fixed a bug when using radiance groups with variance clamping and OpenCL
* Fixed camera invisible objects usage with volumes
* Fixed TASK_EMIT of LightStrategyPower
* Fixed a crash when using RTPATHOCL and editing area lights (issue #173)
* Fixed a bug when using radiance groups with variance clamping and OpenCL

''Alpha1 released''

* Fixed a crash when using negative material emission values (issue #177)
* Fixed LXS parsing in pyluxcoretools
* Fixed a problem when mixing transparent and solid materials with Mix (issue #183)
* Fix a bug when using glossy coating with any specular material
* Fixed LXS parsing of point light source position
* Fixed object ID not being saved by FILESAVER engine