@@ -103,7 +103,7 @@ Spectrum InfiniteLight::GetRadiance(const Scene &scene,
 
 	const float distPdf = imageMapDistribution->Pdf(u, v);
 	if (directPdfA) {
-		if (useVisibilityMapCache) {
+		if (useVisibilityMapCache && visibilityMapCache) {
 			const Distribution2D *cacheDist = visibilityMapCache->GetVisibilityMap(p, n);
 			if (cacheDist) {
 				const float cacheDistPdf = cacheDist->Pdf(u, v);
@@ -180,7 +180,7 @@ Spectrum InfiniteLight::Illuminate(const Scene &scene,
 	float uv[2];
 	float distPdf;
 	
-	if (useVisibilityMapCache) {
+	if (useVisibilityMapCache && visibilityMapCache) {
 		const Distribution2D *dist = visibilityMapCache->GetVisibilityMap(p, n);
 		if (dist)
 			dist->SampleContinuous(u0, u1, uv, &distPdf);
